@@ -28,7 +28,7 @@
 #ifndef _ITERM_H_
 #define _ITERM_H_
 
-#define USE_CUSTOM_LAYOUT	0	// for custom typesetter and layout in text system
+#define USE_CUSTOM_LAYOUT	1	// for custom typesetter and layout in text system
 
 
 #define USE_CUSTOM_DRAWING	0
